<resources>
    <string name="app_name">SFUTransiter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="sfu_transiter">SFU Transiter</string>
    <string name="continue_as_anonymous">Continue as Anonymous</string>
    <string name="or_log_in">or Log in</string>
    <string name="password">password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="bus">Bus</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="search_by">Search By</string>
    <string name="select_bus">Select Bus</string>
    <string name="_143">143</string>
    <string name="_144">144</string>
    <string name="r5">R5</string>
    <string name="_145">145</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="i_understand">I understand</string>
    <string name="translink_disclaimer">Some of the data used in this product or service is provided by permission of TransLink. TransLink assumes no responsibility for the accuracy or currency of the Data used in this product or service.</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="currently_n_buses_on_road">Currently %1$d buses on road</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="Password">Password</string>
    <string name="register_an_account">Register an account</string>
    <string name="fail_register">Failed to register: %1$s</string>
    <string name="save_success">Saved successfully</string>
    <string name="log_in">Log in</string>
    <string name="xxjohndoexx">xxJohnDoeXx</string>
    <string name="username">Username</string>
    <string name="fail_login">Fail to log in: %1$s</string>
    <string name="Invalid_login">Invalid user name or password</string>
    <string name ="your_rating">Your rating</string>
    <string name ="crowd">How busy is it</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="safety">Safety</string>
    <string name="safety_hint">Write any concerns here</string>
    <string name="your_comment">Your comment</string>
    <string name="comment_hint">Write your comments here</string>
    <string name="delete">delete</string>
    <string name="confirm_changes">confirm changes</string>
    <string name="discard">discard</string>
    <string name="post_review">Post review</string>
</resources>