<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.add_comment.EditComment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_rating"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <RatingBar
        android:id="@+id/comment_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="0"
        android:layout_marginStart="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crowd"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <RadioGroup
        android:id="@+id/radio_crowd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/low" />
        <RadioButton
            android:id="@+id/med"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/medium"/>
        <RadioButton
            android:id="@+id/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/high"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/safety"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/txt_safety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/safety_hint"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_comment"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:gravity="top|start"
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_hint"
        android:lines="6"
        android:maxLines="6"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#D32F2F" />
        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#D32F2F" />
        <Button
            android:id="@+id/btn_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_changes"
            android:textColor="#D32F2F" />
    </LinearLayout>

</LinearLayout>