<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.register.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF5555"
        android:fontFamily="@font/maru_bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginVertical="16dp"
        android:text="@string/register_an_account" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/etxt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:hint="John"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="@font/maru_regular"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/etxt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:hint="Doe"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etxt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="JohnDoe@doe.com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/maru_regular"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/etxt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="John Doe"
        android:importantForAutofill="no"
        android:fontFamily="@font/maru_regular"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="HardcodedText,DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maru_regular"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/etxt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="John Doe"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:fontFamily="@font/maru_regular"
        android:minHeight="48dp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:fontFamily="@font/maru_bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#D32F2F" />

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maru_bold"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="#D32F2F" />
    </LinearLayout>

</LinearLayout>