<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="20sp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/checkbox_do_not_show_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_not_show_again"
        android:textSize="16sp"
        android:layout_marginStart="8dp" />
</LinearLayout>